Adding JavaScriptBasic Solution

--- a/2 CSS/LegoProblem/lego.html
+++ b/2 CSS/LegoProblem/lego.html
@@ -6,8 +6,8 @@
    </head>
    <body>
        <div id="wrapper">
-         <div id="header"></div>
-         <div id="navigation"></div>
+         <div id="header">head</div>
+         <div id="navigation">nav</div>
 
          <div id="main_content">
             <div class="subcontents"></div>
