fix error in Portfolio Assignment

--- a/2 CSS/PortfolioBreakdownProblem/Portfolio.html
+++ b/2 CSS/PortfolioBreakdownProblem/Portfolio.html
@@ -14,7 +14,7 @@
                 <h3>Master of Shadows and the Internet</h3>
             </div>
             <div class="main-content">
-                <img src="./images/photo_of_me.jpg">    
+                <img src="./images/photo_of_me.jpg" alt="photo image">    
                 <div class="about_me">
                     <h2>About me</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -36,15 +36,15 @@
                     consequat. Duis aute irure dolo</p>
                     <h2>Technologies</h2>
                     <ul class="theseimages">
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
+                        <li><img src="./images/CSS.png" alt="photo image"></li>
+                        <li><img src="./images/CSS.png" alt="photo image"></li>
+                        <li><img src="./images/CSS.png" alt="photo image"></li>
+                        <li><img src="./images/CSS.png" alt="photo image"></li>
+                        <li><img src="./images/CSS.png" alt="photo image"></li>
+                        <li><img src="./images/CSS.png" alt="photo image"></li>
+                        <li><img src="./images/CSS.png" alt="photo image"></li>
+                        <li><img src="./images/CSS.png" alt="photo image"></li>
+                        <li><img src="./images/CSS.png" alt="photo image"></li>
                     </ul>
                     <button>la Mode</button>
                 </div>
@@ -57,15 +57,15 @@
                     consequat. Duis aute irure dolo</p>
                     <h2>Technologies</h2>
                     <ul class="theseimages">
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
                     </ul>
                     <button>familycontacts</button>
                 </div>
@@ -78,15 +78,15 @@
                     consequat. Duis aute irure dolo</p>
                     <h2>Technologies</h2>
                     <ul class="theseimages">
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
-                        <li><img src="./images/CSS.png"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
+                        <li><img src="./images/CSS.png" alt="icon image"></li>
                     </ul>
                     <button>fiveEleven</button>
                 </div>                    
@@ -97,10 +97,10 @@
             <p>jdoe@junkmail.com | ###-555-1212</p>
             <br>
             <ul>
-                <li><img src="./images/github.png" id="social-image"><a href="">git me</a></li>
-                <li><img src="./images/linkedin.png" id="social-image"><a href="">link me</a></li>
-                <li><img src="./images/twitter.png" id="social-image"><a href="">tweet me</a></li>
-                <li><img src="./images/codepen.png" id="social-image"><a href="">my pens</a></li>
+                <li><img src="./images/github.png" class="social-image" alt="icon image"><a href="">git me</a></li>
+                <li><img src="./images/linkedin.png" class="social-image" alt="icon image"><a href="">link me</a></li>
+                <li><img src="./images/twitter.png" class="social-image" alt="icon image"><a href="">tweet me</a></li>
+                <li><img src="./images/codepen.png" class="social-image" alt="icon image"><a href="">my pens</a></li>
             </ul>                    
         </div>
     </body>
