--- a/3 JavaScript/Fancy.html
+++ b/3 JavaScript/Fancy.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Billion</title>
         <script type="text/javascript" src=  "http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
-        <script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>    
+        <script type="text/javascript" src="../jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>    
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">       
 
         <script type="text/javascript">
@@ -15,21 +15,22 @@
                 var thisArr = [ "James", "Jill", "Jane", "Jack" ];
 
                 if (reversed)
-                {
-                    // alert("t")
-                    for ( var i = thisArr.length - 1; i > 0; i-- )
-                        alert(i + " " + symbol + " " + thisArr[i]);
+                {                 
+                    for ( var i = thisArr.length - 1; i >= 0; i-- )
+                        console.log(i + " " + symbol + " " + thisArr[i]);
                 }
                 else
-                {
-                    // alert("f")
+                {                    
                     for ( var i = 0; i < thisArr.length; i++ )
-                    alert(i + " " + symbol + " " + thisArr[i]);
+                    console.log(i + " " + symbol + " " + thisArr[i]);
                 }
             }
             printArray("=<",false);
+            console.log('----------------------');
             printArray("=<", true);
+            console.log('----------------------');
             printArray("=<");
+            console.log('----------------------');
             printArray();
         </script>
     </head>
