--- a/3 JavaScript/hash.html
+++ b/3 JavaScript/hash.html
@@ -6,30 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>I Do Declare</title>
 	<script type="text/javascript">
-		let number1 = 1
-		let number2 = -1
-		let number3 = 5.3
-		let number4 = 10000000000000000000
-
-		let string1 = "howday"
-		let string2 = "can i shpell?"
-		let string3 = "&deg;"
-
-		let bool1 = false
-		let bool2 = true;
-
-		let myVar = undefined; //or let myVar;
-
-		console.log("1st number: ", number1);
-		console.log("2nd number: ", number2);
-		console.log("3rd number: ", number3);
-		console.log("4th number: ", number4);
-		console.log("1st string: ", string1);
-		console.log("2nd string: ", string2);
-		console.log("3rd string: ", string3);
-		console.log("1st bool: ", bool1);
-		console.log("2nd second bool: ", bool2);
-		console.log("undefined variable: " myVar);
+		console.log(1 == true);
+		console.log(2 == "2");
+		console.log("hello" === 'hello');
+		console.log(!false);
+		console.log(Math && console);
+		console.log(1 && "");
+		console.log(null || undefined);
 	</script>
 </head>
 <body>
