--- a/4 jQuery/HideRestore.html
+++ b/4 jQuery/HideRestore.html
@@ -41,33 +41,33 @@
         
             <div class="thisrow">
                 <div class="each">
-                    <img src="BrianBabyPic.png" alt="pic">
+                    <img src="images\BrianBabyPic.png" alt="pic">
                 </div>
                 <div class="each">
-                    <img src="BrianBabyPic.png" alt="pic">
+                    <img src="images\BrianBabyPic.png" alt="pic">
                 </div>
                 <div class="each">
-                    <img src="BrianBabyPic.png" alt="pic">
+                    <img src="images\BrianBabyPic.png" alt="pic">
                 </div>
                 <div class="each">
-                    <img src="BrianBabyPic.png" alt="pic">
+                    <img src="images\BrianBabyPic.png" alt="pic">
                 </div>
             </div>
             <div class="thisrow">
-                    <div class="each">
-                        <img src="BrianBabyPic.png" alt="pic">
-                    </div>
-                    <div class="each">
-                        <img src="BrianBabyPic.png" alt="pic">
-                    </div>
-                    <div class="each">
-                        <img src="BrianBabyPic.png" alt="pic">
-                    </div>
-                    <div class="each">
-                        <img src="BrianBabyPic.png" alt="pic">
-                    </div>
+                <div class="each">
+                    <img src="images\BrianBabyPic.png" alt="pic">
+                </div>
+                <div class="each">
+                    <img src="images\BrianBabyPic.png" alt="pic">
+                </div>
+                <div class="each">
+                    <img src="images\BrianBabyPic.png" alt="pic">
+                </div>
+                <div class="each">
+                    <img src="images\BrianBabyPic.png" alt="pic">
                 </div>
             </div>
+        </div>
     </body>
 
     <div class="footer"  style="background-color: lightblue; height:50px;">    
