--- a/3 JavaScript/jsCircles-master/demo.html
+++ b/3 JavaScript/jsCircles-master/demo.html
@@ -3,7 +3,7 @@
 	<title>Javascript Box - OOP demo</title>
 	<script>
 		//using immediate function to avoid global variable issues
-		var releaseCircle = function(){
+		var mouseTime = function(){
 	
 			var mousedown_time;
 	
@@ -21,7 +21,7 @@
 			}
 			//technically we don't even need the mousedown variable but we're leaving it there for now..
 		};		
-		releaseCircle();
+		mouseTime();
 		</script>
 	</head>
 <body>
