--- a/5 APIsandAJAX/Pokeman.html
+++ b/5 APIsandAJAX/Pokeman.html
@@ -7,25 +7,70 @@
     <title>Pokeman</title>
     <script type="text/javascript" src=  "http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>        
     <!-- <script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>     -->
-
+    <style> 
+        .icons img{
+            height: 50px;
+        }
+        .img{
+            height: 110px;
+            margin: 10px auto;
+            padding: 0px;
+        }
+        .pokedeck #img{
+            text-align: center;
+        }
+        .icons{
+            width: 500px;
+            height: auto;
+            display: inline-block;
+            /* vertical-align: top; */
+        }
+        .pokedeck {
+            width: 170px;
+            box-sizing: border-box;
+            border: 10px solid red;
+            float: right;
+            height: 500px;
+            padding: 30px;
+        }        
+        body{
+            display: inline-block;
+            margin:0 auto;
+            /* width:980px;         */
+        }
+    </style>
     <script type="text/javascript">
         $(document).ready(function(){
-            for (var i = 1; i < 151; i++) {
-                // $('body').append(`<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/${i}.png">`) 
-                $('body').append(`<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${i}.png">`) 
-            }
+            for (var i = 1; i < 150; i++) {
+                $('.icons').append(`<img id="${i}" src="http://pokeapi.co/media/img/${i}.png">`) 
+            }            $(document).on('click','img',function(){
+                $.getJSON('https://pokeapi.co/api/v2/pokemon/' + this.id + "/", function(thisresponse) {
+                    console.log(thisresponse)
+                    var html_str = "";
+                    html_str += "<div id='img'><img src='" + thisresponse.sprites.front_shiny + "'></div>";                    
+                    html_str += "<h4>Name: " + thisresponse.name + "</h4>";
+                    html_str += "<h4>Height:</h4>";
+                    html_str += thisresponse.height;
+                    html_str += "<h4>Weight</h4>";
+                    html_str += thisresponse.weight;
+                    html_str += "<h4>Types</h4>";
+                    html_str += "<ul>";
+                    for (var k = 0; k < thisresponse['types'].length; k++) {
+                        html_str += "<li>" + thisresponse.types[k].type.name + "</li>";
+                    }
+                    html_str += "</ul>";
+                    $('.pokedeck').html(html_str)
+                    $('html, body').animate({scrollTop: 0}, 600);                        
+                })
+            })            
         });
     </script>
 </head>
 
-    <body>
-        <div class="wrapper">
-            <h1>Pokeman</h1>                    
-        </div>
-    </body>
-
-    <!-- <div class="footer"  style="background-color: lightblue; height:50px;">    
-            <h1></h1>
-            <button>Show Pics</button>
-    </div> -->
+<body>
+    <div class="icons"></div>
+    <div class='pokedeck'>
+        <div class="img"></div>
+    </div>
+</body>
 </html>
